--- a/EpicCamera/app/src/main/res/values/strings.xml
+++ b/EpicCamera/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="ui">User Interface</string>
+    <string name="frag1">Fragment 1</string>
+    <string name="frag2">Fragment 2</string>
 </resources>
