--- a/OpenCV/Camera/app/src/main/res/values/strings.xml
+++ b/OpenCV/Camera/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="request_permission">Permission</string>
     <string name="camera_error">Camera error</string>
 
+    <string name="p_color_title">Colors</string>
+    <string name="p_color_summ">Summary</string>
+    <string name="p_color_dialog">Dialog</string>
+    <string name="p_color_default">Default</string>
 </resources>
