--- a/Impro/app/src/main/res/values/strings.xml
+++ b/Impro/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="main">MainFragment</string>
     <string name="menu">MenuFragment</string>
+    <string name="colorbar">ColorbarFragment</string>
     <string name="stillfragment">StillFragment</string>
     <string name="livefragment">LiveFragment</string>
     <string name="mainact">MainActivity</string>
