--- a/Impro/app/src/main/res/values/strings.xml
+++ b/Impro/app/src/main/res/values/strings.xml
@@ -11,16 +11,16 @@
     <string name="request_permission">Permission</string>
     <string name="camera_error">Camera error</string>
 
-    <string name="p_color_title">Colors</string>
-    <string name="p_color_summ">Summary</string>
+    <string name="p_color_title">Filtering scheme</string>
+    <string name="p_color_summ">Choose RGB, CMYK or HSV</string>
     <string name="p_color_dialog">Dialog</string>
     <string name="p_color_default">Default</string>
 
     <string name="p_quality_title">Quality</string>
-    <string name="p_quality_dialog">Choose the picture quality</string>
+    <string name="p_quality_dialog">Choose the filtered image size</string>
     <string name="p_quality_default">100%</string>
 
-    <string name="p_numberpicker_summary">Choose the picture quality</string>
+    <string name="p_numberpicker_summary">Choose the filtered image size</string>
     <string name="p_numberpicker_title">Quality</string>
 
     <string name="picture_description">Hier ist ein schoenes Bild!</string>
