--- a/Impro/app/src/main/res/values/strings.xml
+++ b/Impro/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="button_saveorig">Save original image</string>
     <string name="button_savefilt">Save filtered image</string>
     <string name="button_back">Back</string>
+    <string name="button_ok">OK</string>
+    <string name="button_cancel">Cancel</string>
 </resources>
