--- a/Impro/app/src/main/res/values/strings.xml
+++ b/Impro/app/src/main/res/values/strings.xml
@@ -13,8 +13,12 @@
 
     <string name="p_color_title">Filtering scheme</string>
     <string name="p_color_summ">Choose RGB, CMYK or HSV</string>
-    <string name="p_color_dialog">Dialog</string>
-    <string name="p_color_default">Default</string>
+    <string name="p_color_dialog">Filtering scheme</string>
+
+    <string name="p_imagetype_title">Image format</string>
+    <string name="p_imagetype_summ">Choose png, jpg or webp</string>
+    <string name="p_imagetype_dialog">Image format</string>
+
 
     <string name="p_quality_title">Quality</string>
     <string name="p_quality_dialog">Choose the filtered image size</string>
